chrome/browser/resources/contextual_tasks/app.css
/* Copyright 2025 The Chromium Authors
 * Use of this source code is governed by a BSD-style license that can be
 * found in the LICENSE file. */

/* #css_wrapper_metadata_start
 * #type=style-lit
 * #import=chrome://resources/cr_elements/cr_shared_vars.css.js
 * #scheme=relative
 * #css_wrapper_metadata_end */

:host {
  --color-composebox-cancel-button: rgba(10,10,10, 1);
  /* The top border of matches/tab suggestions dropdown in context menu. */
  --color-composebox-file-carousel-divider: rgba(210, 225, 252, 1);
  --color-composebox-file-carousel-remove-button: rgba(0, 0, 0, 0.6);
  --color-composebox-file-carousel-remove-gradient-end: rgba(0, 0, 0, 0.2);
  --color-composebox-file-carousel-remove-gradient-start: rgba(0, 0, 0, 0.2);
  --color-composebox-file-carousel-url: rgba(91, 91, 91, 1);
  --color-composebox-file-chip-background: rgb(225, 227, 232);
  --color-composebox-file-chip-background-hovered: rgba(225, 227, 232, 1);
  --color-composebox-file-chip-favicon-background: rgba(255, 255, 255, 1);
  --color-composebox-file-chip-text: rgba(31, 31, 31, 1);
  --color-composebox-font: rgba(86, 89, 94, 1);
  --color-composebox-font-dark: rgba(10, 10, 10, 1);
  /* Used in matches + textbox input (but textbox input overridden
   * for co-browsing to be color-composebox-font.
   */
  --color-composebox-font-light: rgba(31, 31, 31, 1);
  --color-composebox-input-plate-outline: rgba(220, 223, 229, 1);
  --color-composebox-hover: rgba(233, 235, 240, 1);
  --color-composebox-pdf-chip-icon-background: rgba(219, 69, 55, 1);
  --color-composebox-pdf-chip-icon-border: rgba(255, 255, 255, 1);
  --color-composebox-type-ahead: rgba(117, 117, 117, 1);
  --color-composebox-type-ahead-chip: rgba(117, 117, 117, 1);
  --color-composebox-voice-lens-button: rgba(10, 10, 10, 1);
  --color-search-animated-glow-dragging-opaque-frost:
      rgba(240, 242, 245);
  --color-searchbox-results-background-hovered: rgba(31, 31, 31, 0.06);
  --color-zero-state-greeting: rgba(10, 10, 10, 1);
  --composebox-context-menu-entrypoint-button-color: rgba(31, 31, 31, 1);
  --cr-composebox-background-color: rgba(243, 245, 246, 1);
  --cr-composebox-file-thumbnail-remove-button-fill-color: rgba(255, 255, 255, 1);
  --cr-composebox-submit-button-hover-color: rgba(32, 33, 36, .2);
  /* Dropdown item color in context menu entrypoint. */
  --cr-primary-text-color: rgba(31, 31, 31, 1);
  --error-bottom-line-color: #70757A;
  --error-top-line-color: #202124;
  --gradient-protection-width: 100%;
  --max-composebox-width: 692px;
  --min-composebox-width: 200px;
  --paper-tooltip-background:rgba(255, 255, 255, 1);
  --paper-tooltip-text-color: rgba(0, 0, 0, 1);
  --protected-icon-background-color: #535353;
  --remove-button-border-radius: 10%;
  --remove-button-height: var(--remove-button-width);
  --remove-button-inset-inline-end: calc((var(--thumbnail-chip-width) - var(--thumbnail-chip-icon-size)) / 2);
  --remove-button-width: calc(var(--thumbnail-chip-icon-size) + var(--thumbnail-chip-padding) * 2);
  --search-background-color: rgba(255, 255, 255, 1);
  --search-background-color-rgb: 255, 255, 255;
  --thumbnail-chip-icon-size: 16px;
  --thumbnail-chip-overlay-width: 100%;
  --thumbnail-chip-padding: 6px;
  --thumbnail-chip-width: 154px;
  /* Toolbar colors */
  --toolbar-background-color: var(--search-background-color);
  --toolbar-text-color: rgb(31, 31, 31);
  --toolbar-button-icon-color: rgb(31, 31, 31);
  --toolbar-divider-color: rgb(211,227,253);
  --toolbar-menu-background-color: rgb(255, 255, 255);


  background-color: var(--search-background-color);
  display: grid;
  grid-template-columns: 100%;
  grid-template-rows: auto 1fr;
  height: 100%;
  overflow: hidden;
}


:host([is-ai-page_]) {
  /* Only set this transition for AIM results so it only applies when going
    * from All tab to AIM results and not the reverse. */
  transition-duration: 0.5s;
  transition-timing-function: ease-in-out;
  transition-property: --search-background-color,
                       --cr-composebox-background-color;
}

/* Light mode not on AI page */
:host(:not([is-ai-page_]):not([dark-mode_])) {
  --cr-composebox-background-color: rgba(243, 245, 246, 1);
  --search-background-color: white;
}

/* Light mode on AI page */
:host([is-ai-page_]:not([dark-mode_])) {
  --cr-composebox-background-color: rgba(243, 245, 246, 1);
  --search-background-color: white;
}

/* Dark mode not on AI page */
:host(:not([is-ai-page_])[dark-mode_]) {
  --cr-composebox-background-color: rgba(40, 41, 42, 1);
  --search-background-color: rgba(31, 31, 31, 1);
}

/* Dark mode on AI page */
:host([is-ai-page_][dark-mode_]) {
  --cr-composebox-background-color: rgba(29, 30, 38, 1);
  --search-background-color: rgba(16, 18, 24, 1);
}

:host([dark-mode_]) {
  --color-composebox-background: rgba(31, 31, 31, 1);
  --color-composebox-cancel-button: rgba(191, 191, 191, 1);
  --color-composebox-context-entrypoint-hover-background: rgba(63, 64, 74, 1);
  --color-composebox-file-carousel-divider: rgba(94, 94, 94, 1);
  --color-composebox-file-carousel-remove-gradient-end: rgba(100, 100, 100, 0.2);
  --color-composebox-file-carousel-remove-gradient-start: rgba(100, 100, 100, 0.2);
  --color-composebox-file-carousel-url: rgba(230, 232, 240, 1);
  --color-composebox-file-chip-background: rgba(42, 43, 54, 1);
  --color-composebox-file-chip-background-hovered: rgba(63, 64, 74, 1);
  --color-composebox-file-chip-favicon-background: rgba(31, 31, 31, 1);
  --color-composebox-file-chip-text: rgba(227, 227, 227, 1);
  --color-composebox-font: rgba(230, 232, 240, 1);
  --color-composebox-font-dark: rgba(230, 232, 240, 1);
  --color-composebox-font-light: rgba(230, 232, 240, 1);
  --color-composebox-hover: rgba(62, 63, 67, 1);
  --color-composebox-input-icon: var(--color-searchbox-results-icon);
  --color-composebox-input-plate-outline: rgba(45, 47, 56, 1);
  --color-composebox-type-ahead: rgba(199, 199, 199, 1);
  --color-composebox-type-ahead-chip: rgba(199, 199, 199, 1);
  --color-composebox-voice-lens-button: rgba(191, 191, 191, 1);
  --color-searchbox-results-background-hovered: rgba(54, 54, 54, 1);
  --color-zero-state-greeting: rgba(230, 232, 240, 1);
  --composebox-context-menu-entrypoint-button-color: rgba(63, 64, 74, 1);
  --cr-color-sys-divider: var(--color-composebox-file-chip-divider);
  --cr-composebox-background-color: rgba(29, 30, 38, 1);
  --color-search-animated-glow-dragging-opaque-frost:
      rgba(44, 45, 53, 1);
  --color-menu-background: var(--cr-menu-background-color);
  --color-composebox-context-entrypoint-text-disabled: rgba(105, 105, 105, 1);
  --cr-composebox-file-thumbnail-remove-button-fill-color: rgba(255, 255, 255, 1);
  --color-composebox-submit-button-background: rgba(10, 80, 209, 1);
  --cr-composebox-submit-button-hover-color: rgba(62, 63, 67, 0.1);
  --cr-icon-button-fill-color: rgba(0, 0, 0, 1);
  --cr-primary-text-color: var(--color-composebox-file-chip-text);
  --error-bottom-line-color: #9AA0A6;
  --error-top-line-color: #E8EAED;
  --paper-tooltip-background:rgba(63, 64, 74, 1);
  --paper-tooltip-text-color: rgba(255, 255, 255, 1);
  --protected-icon-background-color: #E8EAED;
  --remove-button-fill-color: rgba(255, 255, 255, 1);
  --search-background-color: rgba(16, 18, 23, 1);
  --search-background-color-rgb: 16, 18, 23;

  /* Toolbar colors - Dark mode */
  --toolbar-text-color: rgb(227,227,227);
  --toolbar-button-icon-color: rgb(154,160,166);
  --toolbar-divider-color: rgb(94,94,94);
  --toolbar-menu-background-color: rgb(31, 31, 31);
}

[hidden] {
  display: none !important;
}

#threadFrame {
  border: none;
  grid-column: 1;
  grid-row: 2;
  overflow: hidden;
}

/* Disable scroll for zero state. */
:host([is-zero-state_]) {
  overflow: hidden;
}

error-page {
  display: none;
}

:host([is-error-page-visible_]) error-page {
  display: block;
  position: fixed;
  top: 76px;
}

:host([is-error-page-visible_]) #threadFrame,
:host([is-error-page-visible_]) #composebox,
:host([is-error-page-visible_]) .flex-center {
  visibility: hidden;
}

:host([is-zero-state_]) #composebox {
  bottom: 0;
  height: auto;
  inset-inline-start: 20px;
  max-width: var(--max-composebox-width);
  min-width: var(--min-composebox-width);
  pointer-events: auto;
  position: relative;
  top: auto;
  z-index: 2;
  /* Left/right padding of parent is 20px. */
  width: calc(100% - 20px);
}

@media (max-width: 900px) {
  :host([is-zero-state_]) #composebox,
  :host([is-zero-state_]) #composeboxHeaderWrapper {
    inset-inline-start: 5%;
    width: calc(90% - 20px);
  }
}
@media (max-width: 650px) {
  :host([is-zero-state_]) #composebox,
  :host([is-zero-state_]) #composeboxHeaderWrapper {
    inset-inline-start: 7.5%;
    width: calc(85% - 20px);
  }
}

@media (max-width: 480px) {
  :host([is-zero-state_]) #composebox,
  :host([is-zero-state_]) #composeboxHeaderWrapper {
    inset-inline-start: 0;
    width: calc(100% - 20px);
  }
}

@media (min-width: 750px) {
  :host([is-zero-state_]:not([is-shown-in-tab_])) #composebox
  :host([is-zero-state_]:not([is-shown-in-tab_])) #composeboxHeaderWrapper {
    inset-inline-start: 40px;
  }
}

.flex-center {
  align-self: end;
  grid-column: 1;
  grid-row: 2;
}

:host([is-zero-state_]) .flex-center {
  align-self: start;
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 36px;
  height: 51%;
  justify-content: flex-end;
  min-height: 300px;
  overflow-anchor: none;
  pointer-events: none;
  position: absolute;
  width: 100%;
}

#toolbarOverlay {
  align-self: start;
  background-color: var(--search-background-color);
  grid-column: 1;
  grid-row: 1;
  /* Makes the toolbar the correct height. */
  height: 48px;
  position: relative;
  z-index: 2;
}

/* Pseudo element to cover the AIM filter bar while in zero state. */
:host([is-zero-state_]:not([is-in-basic-mode_])) #toolbarOverlay::after {
  background-color: var(--search-background-color);
  content: '';
  display: block;
  /* The explore bar is 48px, so this adds an 8px buffer margin. */
  height: 56px;
  position: absolute;
  top: 100%;
  width: 100%;
}

.thread-header {
  color: var(--color-zero-state-greeting);
  font-family: Google Sans, Roboto, Arial, sans-serif;
  font-size: 32px;
  font-weight: 500;
  inset-inline-start: 20px;
  line-height: 100%;
  margin: 0;
  margin-right: 20px; /* To push for earlier wrapping. */
  position: relative;
  z-index: 2;
}

:host(:not([is-shown-in-tab_])) .thread-header {
  font-size: 28px;
  font-weight: 400;
  line-height: 36px;
  margin: 0 8px 0 0;
}

#composeboxHeaderWrapper {
  background-color: var(--search-background-color);
  display: none;
  justify-content: flex-start;
  /* Same width so stays at same centering as composebox with flexbox. */
  max-width: var(--max-composebox-width);
  min-width: var(--min-composebox-width);
  position: relative;
  width: calc(100% - 20px);
}

:host([is-zero-state_]) #composeboxHeaderWrapper {
  display: flex;
}

@media (max-width: 480px) {
  :host([is-shown-in-tab_]) .thread-header {
    inset-inline-start: 30px;
    position: absolute;
  }
  :host([is-shown-in-tab_]) #composeboxHeaderWrapper {
    height: 64px;
    width: 100%;
  }
}

/* Give thread header more space when it wraps. */
@media (max-width: 440px) {
  #composeboxHeaderWrapper {
    padding-bottom: 10px;
  }
  :host(:not([is-shown-in-tab_])) #composeboxHeaderWrapper {
    padding-bottom: 20px;
  }
}

@media (max-width: 480px) {
  /* Higher specificity so it wins over other side panel formatting. */
  :host(:not([is-shown-in-tab_])) .thread-header {
    inset-inline-start: 28px;
    position: absolute;
  }
  :host(:not([is-shown-in-tab_])) #composeboxHeaderWrapper {
    height: 64px;
    width: 100%;
  }
}

@media (max-height: 480px) {
  :host([is-zero-state_]) #composeboxHeaderWrapper {
    margin-top: 100px;
  }
}

@media (max-width: 280px) {
  .thread-header {
    font-size: 11vw;
  }
}

